--- a/README
+++ b/README
@@ -1,7 +1,8 @@
-由于开源站点因为安全问题被下掉，如果编译时出现找不到opensesame依赖情况的，请先手动下载https://github.com/alibaba/opensesame
-本地install，这几天我们会把opensesame发到mavan中央仓库。
-
-临时文档地址：http://alibaba.github.io/dubbo-doc-static/Developer+Guide-zh.htm
+﻿版权说明
+   该项目fork自alibaba/dubbo的master，我们基于此进行一些定制化改造，并单独维护该分支；我们承诺并继续遵守alibaba/dubbo的license
+   
+官方文档地址
+     http://alibaba.github.io/dubbo-doc-static/Developer+Guide-zh.htm
 
 ================================================================
 
